@@ -1,4 +1,4 @@
-.TH SG_SES "8" "September 2014" "sg3_utils\-1.40" SG3_UTILS
+.TH SG_SES "8" "October 2014" "sg3_utils\-1.40" SG3_UTILS
 .SH NAME
 sg_ses \- access a SCSI Enclosure Services (SES) device
 .SH SYNOPSIS
