@@ -2,7 +2,7 @@ sg3-utils (1.40-0.1) unstable; urgency=low
 
   * New upstream version
 
- -- Douglas Gilbert <dgilbert@interlog.com>  Mon, 29 Sep 2014 13:00:00 -0400
+ -- Douglas Gilbert <dgilbert@interlog.com>  Sat, 11 Oct 2014 21:00:00 -0400
 
 sg3-utils (1.39-0.1) unstable; urgency=low
 
